--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
     "next": "13.5.2",
     "next-auth": "^4.23.1",
     "postcss": "8.4.30",
