--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/mongodb.js", "models/user.js", "app/pages/dashboard/page.tsx", "app/api/register/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/mongodb.js", "models/user.js", "app/pages/dashboard/page.tsx", "app/api/register/route.js", "app/pages/dashboard/adminboard/editproductform/[id]/page.jsx", "app/components/editcomponent.jsx"],
   "exclude": ["node_modules"]
 }
